STELLA, CHANGES

#### 2.0.2 (2011-06-??) ###############################

* ADDED: --wait option for checkup command


#### 2.0.1 (2011-06-08) ###############################

NOTE: First release of 2.x.


#### 0.8.X (XXXX-XX-XX) ###############################

NOTE: We're now focusing our effort on 2.0, so these features are still 
      outstanding for a 1.x release (they probably won't be worked on).

* TODO: Force response block content type. 
* TODO: Add option to dump full request/response output to a file by client
* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks

#### 0.8.8 (2011-02-26) ###############################

* FIXED: Require benelux 0.5.17 (fixed for Ruby 1.9.2)

#### 0.8.7.002 (2010-06-14) ###############################

* FIXED: Specifying a host w/ a path and no testplan no longer doubles up the path
* ADDED: Global HTTP client timeout ("stella -T 60")
* CHANGE: Timeouts are reported as exceptions. 


#### 0.8.7 (2010-05-21) ###############################

* FIXED: sequential, rsequential, and random values were broken for Arrays
* FIXED: Support for supplying test durations in the form "5m" (300 seconds)
* CHANGE: Enforce port 443 if port 80 and scheme is HTTPS. 


#### 0.8.6 (2010-04-14) ###############################

* FIXED: Wait option and hosts on CLI were not being passed correctly
* CHANGE: Stella::Testplan#userid now used in digest calculation.
* CHANGE: Moved ProcSource to Storable
* CHANGE: Don't auto freeze testrun.
* CHANGE: Store Stella::Data::HTTP::Request#wait as a Range
* ADDED: Stella::Testplan#userid
* ADDED: Stella.post
* ADDED: Stella::Logger.debug
* ADDED: Print wait time for each request at verbose level 3 (-vvv)


#### 0.8.5 (2010-03-27) ###############################
